src/antlr/SchemaParser.java
// Generated from schema/SchemaParser.g4 by ANTLR 4.9.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SchemaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, PARTIAL=2, EXACT=3, CERTAIN=4, LATE=5, ENUM=6, INTERFACE=7, DEFINE=8, 
		STATIC=9, EXTENDS=10, IMPLEMENTS=11, VERY_FUZZY=12, FUZZY=13, BRACE_OPEN=14, 
		BRACE_CLOSE=15, BRACKET_OPEN=16, BRACKET_CLOSE=17, INDEX_OPEN=18, INDEX_CLOSE=19, 
		REFERENCE_OPERATOR=20, LATE_OPERATOR=21, OPTIONAL_OPERATOR=22, ANNOTATION_AT=23, 
		PRIM_BOOL=24, PRIM_INT=25, PRIM_LONG=26, PRIM_FLOAT=27, PRIM_DOUBLE=28, 
		PRIM_VOID=29, MATCH_ANY=30, MATCH_IGNORE=31, NOT=32, BYTECODE_STRING=33, 
		BYTECODE_STRING_IGNORE_CASE=34, BYTECODE_STRING_CONTAINS=35, BYTECODE_CALL=36, 
		BYTECODE_CALL_SEPARATOR=37, BYTECODE_NEW_INSTANCE=38, BYTECODE_TYPE_REF=39, 
		BYTECODE_FIELD_REF=40, BYTECODE_CONST=41, VARARGS_ANY=42, WS=43, INT_LIT=44, 
		BOOL_LIT=45, CHAR_LIT=46, STRING_LIT=47, FLOAT_LIT=48, SEMICOLON=49, COMMA=50, 
		EXACT_MODIFIER=51, IDENTIFIER=52, JAVA_TYPE_IDENTIFIER=53;
	public static final int
		RULE_primitive = 0, RULE_identifier = 1, RULE_referencedTypeIdentifier = 2, 
		RULE_lateTypeIdentifier = 3, RULE_baseTypeIdentifier = 4, RULE_typeIdentifier = 5, 
		RULE_constant = 6, RULE_attribArgList = 7, RULE_annotation = 8, RULE_macroDef = 9, 
		RULE_optionalExpression = 10, RULE_fieldDef = 11, RULE_methodArgList = 12, 
		RULE_bytecodeStringOption = 13, RULE_bytecodeConstValue = 14, RULE_bytecodeString = 15, 
		RULE_bytecodeCall = 16, RULE_bytecodeNewInstance = 17, RULE_bytecodeTypeReference = 18, 
		RULE_bytecodeFieldReference = 19, RULE_bytecodeConst = 20, RULE_bytecodeIdentifier = 21, 
		RULE_methodBody = 22, RULE_methodDef = 23, RULE_extendsStatement = 24, 
		RULE_implementsStatement = 25, RULE_classDef = 26, RULE_schema = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"primitive", "identifier", "referencedTypeIdentifier", "lateTypeIdentifier", 
			"baseTypeIdentifier", "typeIdentifier", "constant", "attribArgList", 
			"annotation", "macroDef", "optionalExpression", "fieldDef", "methodArgList", 
			"bytecodeStringOption", "bytecodeConstValue", "bytecodeString", "bytecodeCall", 
			"bytecodeNewInstance", "bytecodeTypeReference", "bytecodeFieldReference", 
			"bytecodeConst", "bytecodeIdentifier", "methodBody", "methodDef", "extendsStatement", 
			"implementsStatement", "classDef", "schema"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'partial'", "'exact'", "'certain'", "'late'", "'enum'", 
			"'interface'", "'define'", "'static'", "'extends'", "'implements'", "'very fuzzy'", 
			"'fuzzy'", "'{'", "'}'", "'('", "')'", "'['", "']'", "'!'", "'#'", "'?'", 
			"'@'", "'boolean'", "'int'", "'long'", "'float'", "'double'", "'void'", 
			"'*'", "'_'", "'~'", "'.string'", "'caseless'", "'contains'", "'.call'", 
			"'->'", "'.new-instance'", "'.reference'", "'.field'", "'.const'", "'...'", 
			null, null, null, null, null, null, "';'", "','", "'$'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "PARTIAL", "EXACT", "CERTAIN", "LATE", "ENUM", "INTERFACE", 
			"DEFINE", "STATIC", "EXTENDS", "IMPLEMENTS", "VERY_FUZZY", "FUZZY", "BRACE_OPEN", 
			"BRACE_CLOSE", "BRACKET_OPEN", "BRACKET_CLOSE", "INDEX_OPEN", "INDEX_CLOSE", 
			"REFERENCE_OPERATOR", "LATE_OPERATOR", "OPTIONAL_OPERATOR", "ANNOTATION_AT", 
			"PRIM_BOOL", "PRIM_INT", "PRIM_LONG", "PRIM_FLOAT", "PRIM_DOUBLE", "PRIM_VOID", 
			"MATCH_ANY", "MATCH_IGNORE", "NOT", "BYTECODE_STRING", "BYTECODE_STRING_IGNORE_CASE", 
			"BYTECODE_STRING_CONTAINS", "BYTECODE_CALL", "BYTECODE_CALL_SEPARATOR", 
			"BYTECODE_NEW_INSTANCE", "BYTECODE_TYPE_REF", "BYTECODE_FIELD_REF", "BYTECODE_CONST", 
			"VARARGS_ANY", "WS", "INT_LIT", "BOOL_LIT", "CHAR_LIT", "STRING_LIT", 
			"FLOAT_LIT", "SEMICOLON", "COMMA", "EXACT_MODIFIER", "IDENTIFIER", "JAVA_TYPE_IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SchemaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SchemaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PrimitiveContext extends ParserRuleContext {
		public TerminalNode PRIM_BOOL() { return getToken(SchemaParser.PRIM_BOOL, 0); }
		public TerminalNode PRIM_INT() { return getToken(SchemaParser.PRIM_INT, 0); }
		public TerminalNode PRIM_LONG() { return getToken(SchemaParser.PRIM_LONG, 0); }
		public TerminalNode PRIM_FLOAT() { return getToken(SchemaParser.PRIM_FLOAT, 0); }
		public TerminalNode PRIM_DOUBLE() { return getToken(SchemaParser.PRIM_DOUBLE, 0); }
		public TerminalNode PRIM_VOID() { return getToken(SchemaParser.PRIM_VOID, 0); }
		public PrimitiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitive; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitPrimitive(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimitiveContext primitive() throws RecognitionException {
		PrimitiveContext _localctx = new PrimitiveContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_primitive);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRIM_BOOL) | (1L << PRIM_INT) | (1L << PRIM_LONG) | (1L << PRIM_FLOAT) | (1L << PRIM_DOUBLE) | (1L << PRIM_VOID))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(SchemaParser.IDENTIFIER, 0); }
		public TerminalNode EXACT_MODIFIER() { return getToken(SchemaParser.EXACT_MODIFIER, 0); }
		public TerminalNode MATCH_IGNORE() { return getToken(SchemaParser.MATCH_IGNORE, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_identifier);
		int _la;
		try {
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EXACT_MODIFIER:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EXACT_MODIFIER) {
					{
					setState(58);
					match(EXACT_MODIFIER);
					}
				}

				setState(61);
				match(IDENTIFIER);
				}
				break;
			case MATCH_IGNORE:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				match(MATCH_IGNORE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReferencedTypeIdentifierContext extends ParserRuleContext {
		public TerminalNode REFERENCE_OPERATOR() { return getToken(SchemaParser.REFERENCE_OPERATOR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(SchemaParser.IDENTIFIER, 0); }
		public ReferencedTypeIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_referencedTypeIdentifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitReferencedTypeIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReferencedTypeIdentifierContext referencedTypeIdentifier() throws RecognitionException {
		ReferencedTypeIdentifierContext _localctx = new ReferencedTypeIdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_referencedTypeIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(REFERENCE_OPERATOR);
			setState(66);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LateTypeIdentifierContext extends ParserRuleContext {
		public TerminalNode LATE_OPERATOR() { return getToken(SchemaParser.LATE_OPERATOR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(SchemaParser.IDENTIFIER, 0); }
		public LateTypeIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lateTypeIdentifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitLateTypeIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LateTypeIdentifierContext lateTypeIdentifier() throws RecognitionException {
		LateTypeIdentifierContext _localctx = new LateTypeIdentifierContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lateTypeIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(LATE_OPERATOR);
			setState(69);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BaseTypeIdentifierContext extends ParserRuleContext {
		public TerminalNode MATCH_ANY() { return getToken(SchemaParser.MATCH_ANY, 0); }
		public TerminalNode JAVA_TYPE_IDENTIFIER() { return getToken(SchemaParser.JAVA_TYPE_IDENTIFIER, 0); }
		public TerminalNode IDENTIFIER() { return getToken(SchemaParser.IDENTIFIER, 0); }
		public PrimitiveContext primitive() {
			return getRuleContext(PrimitiveContext.class,0);
		}
		public ReferencedTypeIdentifierContext referencedTypeIdentifier() {
			return getRuleContext(ReferencedTypeIdentifierContext.class,0);
		}
		public LateTypeIdentifierContext lateTypeIdentifier() {
			return getRuleContext(LateTypeIdentifierContext.class,0);
		}
		public BaseTypeIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_baseTypeIdentifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitBaseTypeIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BaseTypeIdentifierContext baseTypeIdentifier() throws RecognitionException {
		BaseTypeIdentifierContext _localctx = new BaseTypeIdentifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_baseTypeIdentifier);
		try {
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MATCH_ANY:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				match(MATCH_ANY);
				}
				break;
			case JAVA_TYPE_IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				match(JAVA_TYPE_IDENTIFIER);
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				match(IDENTIFIER);
				}
				break;
			case PRIM_BOOL:
			case PRIM_INT:
			case PRIM_LONG:
			case PRIM_FLOAT:
			case PRIM_DOUBLE:
			case PRIM_VOID:
				enterOuterAlt(_localctx, 4);
				{
				setState(74);
				primitive();
				}
				break;
			case REFERENCE_OPERATOR:
				enterOuterAlt(_localctx, 5);
				{
				setState(75);
				referencedTypeIdentifier();
				}
				break;
			case LATE_OPERATOR:
				enterOuterAlt(_localctx, 6);
				{
				setState(76);
				lateTypeIdentifier();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeIdentifierContext extends ParserRuleContext {
		public TerminalNode INDEX_OPEN() { return getToken(SchemaParser.INDEX_OPEN, 0); }
		public TerminalNode EXTENDS() { return getToken(SchemaParser.EXTENDS, 0); }
		public BaseTypeIdentifierContext baseTypeIdentifier() {
			return getRuleContext(BaseTypeIdentifierContext.class,0);
		}
		public TerminalNode INDEX_CLOSE() { return getToken(SchemaParser.INDEX_CLOSE, 0); }
		public TerminalNode VARARGS_ANY() { return getToken(SchemaParser.VARARGS_ANY, 0); }
		public TypeIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeIdentifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitTypeIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeIdentifierContext typeIdentifier() throws RecognitionException {
		TypeIdentifierContext _localctx = new TypeIdentifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeIdentifier);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				match(INDEX_OPEN);
				setState(80);
				match(EXTENDS);
				setState(81);
				baseTypeIdentifier();
				setState(82);
				match(INDEX_CLOSE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				baseTypeIdentifier();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				baseTypeIdentifier();
				setState(86);
				match(INDEX_OPEN);
				setState(87);
				match(INDEX_CLOSE);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(89);
				match(VARARGS_ANY);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode STRING_LIT() { return getToken(SchemaParser.STRING_LIT, 0); }
		public TerminalNode BOOL_LIT() { return getToken(SchemaParser.BOOL_LIT, 0); }
		public TerminalNode INT_LIT() { return getToken(SchemaParser.INT_LIT, 0); }
		public TerminalNode CHAR_LIT() { return getToken(SchemaParser.CHAR_LIT, 0); }
		public TerminalNode FLOAT_LIT() { return getToken(SchemaParser.FLOAT_LIT, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitConstant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT_LIT) | (1L << BOOL_LIT) | (1L << CHAR_LIT) | (1L << STRING_LIT) | (1L << FLOAT_LIT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttribArgListContext extends ParserRuleContext {
		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}
		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SchemaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SchemaParser.COMMA, i);
		}
		public AttribArgListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribArgList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitAttribArgList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttribArgListContext attribArgList() throws RecognitionException {
		AttribArgListContext _localctx = new AttribArgListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_attribArgList);
		int _la;
		try {
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT_LIT) | (1L << BOOL_LIT) | (1L << CHAR_LIT) | (1L << STRING_LIT) | (1L << FLOAT_LIT))) != 0)) {
					{
					setState(94);
					constant();
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				constant();
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(98);
					match(COMMA);
					setState(99);
					constant();
					}
					}
					setState(104);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationContext extends ParserRuleContext {
		public TerminalNode ANNOTATION_AT() { return getToken(SchemaParser.ANNOTATION_AT, 0); }
		public TypeIdentifierContext typeIdentifier() {
			return getRuleContext(TypeIdentifierContext.class,0);
		}
		public TerminalNode BRACKET_OPEN() { return getToken(SchemaParser.BRACKET_OPEN, 0); }
		public AttribArgListContext attribArgList() {
			return getRuleContext(AttribArgListContext.class,0);
		}
		public TerminalNode BRACKET_CLOSE() { return getToken(SchemaParser.BRACKET_CLOSE, 0); }
		public AnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotation; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitAnnotation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnnotationContext annotation() throws RecognitionException {
		AnnotationContext _localctx = new AnnotationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_annotation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(ANNOTATION_AT);
			setState(108);
			typeIdentifier();
			setState(109);
			match(BRACKET_OPEN);
			setState(110);
			attribArgList();
			setState(111);
			match(BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MacroDefContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(SchemaParser.DEFINE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(SchemaParser.IDENTIFIER, 0); }
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public MacroDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macroDef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitMacroDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MacroDefContext macroDef() throws RecognitionException {
		MacroDefContext _localctx = new MacroDefContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_macroDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(DEFINE);
			setState(114);
			match(IDENTIFIER);
			setState(115);
			constant();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptionalExpressionContext extends ParserRuleContext {
		public TerminalNode OPTIONAL_OPERATOR() { return getToken(SchemaParser.OPTIONAL_OPERATOR, 0); }
		public TerminalNode INT_LIT() { return getToken(SchemaParser.INT_LIT, 0); }
		public OptionalExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optionalExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitOptionalExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptionalExpressionContext optionalExpression() throws RecognitionException {
		OptionalExpressionContext _localctx = new OptionalExpressionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_optionalExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(OPTIONAL_OPERATOR);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INT_LIT) {
				{
				setState(118);
				match(INT_LIT);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldDefContext extends ParserRuleContext {
		public TypeIdentifierContext typeIdentifier() {
			return getRuleContext(TypeIdentifierContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(SchemaParser.SEMICOLON, 0); }
		public TerminalNode NOT() { return getToken(SchemaParser.NOT, 0); }
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public TerminalNode STATIC() { return getToken(SchemaParser.STATIC, 0); }
		public OptionalExpressionContext optionalExpression() {
			return getRuleContext(OptionalExpressionContext.class,0);
		}
		public FieldDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldDef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemaParserVisitor ) return ((SchemaParserVisitor<? extends T>)visitor).visitFieldDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldDefContext fieldDef() throws RecognitionException {
		FieldDefContext _localctx = new FieldDefContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_fieldDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NOT) {
				{
				setState(121);
				match(NOT);
				}
			}

			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ANNOTATION_AT) {
				{
				{
				setState(124);
				annotation();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STATIC) {
				{
				setState(130);
				match(STATIC);
				}
			}

			setState(133);
			typeIdentifier();
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPTIONAL_OPERATOR) {
				{
				setState(134);
				optionalExpression();
				}
			}

			setState(137);
			identifier();
			setState(138);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
